--- a/packages/qj-bbc-mobile-materials/src/style/account/common.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/common.scss
@@ -1,7 +1,7 @@
 .accountTitle {
   margin-left: 33px;
   margin-top: 65px;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
   font-size: 23px;
   font-weight: bold;
   color: #333333;
@@ -55,5 +55,37 @@
     border-radius: 4px;
     text-align: center;
     color: #bbb;
+  }
+}
+
+.agreementWrap {
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #bbb;
+
+  .choose {
+
+  }
+
+  .agreement {
+    display: inline-block;
+    color: #003ea5;
+  }
+
+  .wx-checkbox-input {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+  }
+
+  .wx-checkbox-input.wx-checkbox-input-checked {
+    background-color: #003ea5;
+  }
+
+  .wx-checkbox-input.wx-checkbox-input-checked::before {
+    color: #ffffff;
+    font-size: 14px;
   }
 }
