--- a/packages/qj-bbc-mobile-materials/src/style/account/common.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/common.scss
@@ -25,7 +25,7 @@
   }
 
   .adm-form-item-required-asterisk {
-    color: #ff0934;
+    color: #ff0934 !important;
   }
 
   .adm-form-item-feedback-error {
