--- a/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
@@ -23,7 +23,7 @@
       line-height: 44px;
       background: #fff;
       border-radius: 5px;
-      color: $default-blue;
+      color: $default-color;
       margin-bottom: 40px;
       font-size: 16px;
     }
