--- a/packages/qj-bbc-mobile-materials/src/style/account/review-progress.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/review-progress.scss
@@ -24,9 +24,9 @@
     line-height: 44px;
     background: #fff;
     border-radius: 5px;
-    color: $default-blue;
+    color: $default-color;
     font-size: 16px;
-    border: 1px solid $default-blue;
+    border: 1px solid $default-color;
     text-align: center;
     margin: 40px auto 40px;
   }
