--- a/packages/qj-bbc-mobile-materials/src/style/index.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/index.scss
@@ -1,4 +1,7 @@
 @import './common';
 @import './account';
 @import './goods-list';
+@import './order';
+
+
 @import '@brushes/simulate-component/css';
