--- a/packages/qj-bbc-mobile-materials/src/style/common/goods-item.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/common/goods-item.scss
@@ -1,3 +1,67 @@
-.goods-item {
+@import "../theme";
 
+.goods-item {
+  margin-bottom: 24px;
+
+  .goods-info-wrap {
+    display: flex;
+    margin-bottom: 10px;
+
+    .lPart {
+      padding-right: 8px;
+
+      .img {
+        width: 88px;
+        height: 88px;
+      }
+    }
+
+    .rPart {
+      .title {
+        font-size: 14px;
+        color: $font-color;
+        display: flex;
+        align-items: center;
+        margin-bottom: 9px;
+
+        .text {
+          width: 126px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          -o-text-overflow: ellipsis;
+        }
+
+        .icon {
+          width: 14px;
+          padding-left: 10px;
+        }
+      }
+
+      .sizeWrap {
+        font-size: 12px;
+        color: $font-sub-color;
+
+        .sizeItem {
+          margin-bottom: 2px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .rPart {
+            color: $color-red;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  .handle-bar {
+    display: flex;
+    justify-content: space-between;
+
+    .setGoodsInfo {
+    }
+  }
 }
