--- a/packages/qj-bbc-mobile-materials/src/style/common/index.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/common/index.scss
@@ -1,4 +1,6 @@
 @import './search';
-@import './goods-item';
 @import './icon';
+@import './goods-item';
 @import './goods-item-lite';
+@import './order-item';
+@import './common';
