--- a/packages/qj-bbc-mobile-materials/src/style/theme.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/theme.scss
@@ -7,19 +7,15 @@ $font-color: #394259;
 
 $font-sub-color: #888E9B;
 
-$color-red: #ED4444;
-
 $color-line: #EAEAEA;
 
+$color-red: #ED4444;
+
+$color-orange: #FF9745;
+
+$color-green: #0ED36A;
 
 
-.default-btn {
-  height: 34px;
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  background-color: $default-color;
-  padding: 0 30px;
-  color: #FFFFFF;
-  border-radius: 34px;
-}
+
+
+
