--- a/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
@@ -1,9 +1,8 @@
 @import '../theme';
 
 .authWrap {
-  background-image: url("https://qjstatic.oss-cn-shanghai.aliyuncs.com/B2B/login.png");
+  background: url("https://nebular.oss-cn-shanghai.aliyuncs.com/BBC/merchant/mobile/img/bg.png") center no-repeat;
   background-size: cover;
-  background-position: center;
   position: fixed;
   top: 0;
   left: 0;
