--- a/packages/qj-bbc-mobile-materials/src/style/common/order-item.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/common/order-item.scss
@@ -4,6 +4,7 @@
   padding: 12px;
   background-color: #FFFFFF;
   border-radius: 10px;
+  margin-bottom: 16px;
 
   .order-status {
     display: flex;
