--- a/packages/qj-bbc-mobile-materials/src/style/common/search.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/common/search.scss
@@ -3,8 +3,8 @@
 .search-common-wrap {
   width: 100%;
   box-sizing: border-box;
-  background-color: #FFFFFF;
-  margin-bottom: 8px;
+  background-color: $bg-color;
+  margin-bottom: 8PX;
 
   .search-common {
     width: 100%;
