--- a/packages/qj-bbc-mobile-materials/src/style/index.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/index.scss
@@ -2,6 +2,7 @@
 @import './account';
 @import './goods-list';
 @import './order';
+@import './mine';
 
 
 @import '@brushes/simulate-component/css';
