--- a/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/auth.scss
@@ -19,12 +19,14 @@
     .loginBtn {
       width: 300px;
       height: 44px;
-      line-height: 44px;
       background: #fff;
       border-radius: 5px;
       color: $default-color;
-      margin-bottom: 40px;
       font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto 40px;
     }
 
     .regBtn {
