--- a/packages/qj-bbc-mobile-materials/src/style/goods/goods-list.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/goods/goods-list.scss
@@ -54,7 +54,7 @@
     }
 
     .side-content {
-      flex: 1;
+      width: 100%;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -78,6 +78,7 @@
           align-items: center;
 
           .icon {
+            height: 14px;
             width: 14px;
             margin-right: 2px;
           }
@@ -100,7 +101,7 @@
   }
 
   .goods-list-popup {
-    padding: 26px 16px 0;
+    padding: 26px 16px 26px;
 
     .goods-list-popup-item {
       padding: 16px;
@@ -117,6 +118,7 @@
 
       .r-part {
         flex: 1;
+        text-align: left;
 
         .title {
           font-size: 14px;
