--- a/packages/qj-bbc-mobile-materials/src/style/mine/mine-page.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/mine/mine-page.scss
@@ -16,7 +16,7 @@
       padding-top: 112px;
       box-sizing: border-box;
 
-      .logo {
+      .merchant-logo {
         width: 72px;
         height: 72px;
         border-radius: 100%;
