--- a/packages/qj-bbc-mobile-materials/src/style/common/order-item.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/common/order-item.scss
@@ -6,6 +6,52 @@
   border-radius: 10px;
   margin-bottom: 16px;
 
+  .return-order-reason {
+    background: rgba(250,173,21,0.15);
+    border-radius: 6px;
+    border: 1px solid rgba(250,173,21,0.3);
+    backdrop-filter: blur(10px);
+    text-align: center;
+    font-size: 12px;
+    color: #FF9745;
+    margin-bottom: 12px;
+  }
+
+  .return-order-price {
+    color: $font-color;
+    font-size: 12px;
+  }
+
+  .return-order-dashboard {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    gap: 11px;
+    margin-top: 16px;
+
+    .btn {
+      height: 34px;
+      width: 100%;
+      border-radius: 34px;
+      font-size: 14px;
+      border: 1px solid;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &.l-btn {
+        border-color: $font-color;
+        color: $font-color;
+      }
+
+      &.r-btn {
+        border-color: $default-color;
+        color: #FFFFFF;
+        background-color: $default-color;
+      }
+    }
+  }
+
   .order-status {
     display: flex;
     justify-content: space-between;
