--- a/packages/qj-bbc-mobile-materials/src/style/account/common.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/common.scss
@@ -3,7 +3,7 @@
 .accountTitle {
   margin-left: 33px;
   padding-top: 65px;
-  margin-bottom: 50px;
+  //margin-bottom: 50px;
   font-size: 23px;
   font-weight: bold;
   color: #333333;
