--- a/packages/qj-bbc-mobile-materials/src/style/mine/live-list.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/mine/live-list.scss
@@ -10,6 +10,7 @@
     background-color: #FFFFFF;
     border-radius: 10px;
     padding: 13px;
+    margin-bottom: 16px;
 
     .main-info {
       margin-bottom: 12px;
@@ -41,7 +42,7 @@
           color: $color-red;
         }
         .grey {
-          color: $font-color;
+          color: $font-sub-color;
         }
         .blue {
           color: $default-color
