feat: 政策和协议

--- a/packages/qj-bbc-mobile-materials/src/style/account/common.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/account/common.scss
@@ -95,6 +95,14 @@
   }
 }
 
+.agreement-page-wrap {
+  font-size: 16px;
+  color: $font-color;
+  padding: 16px;
+  box-sizing: border-box;
+  line-height: 28px;
+}
+
 .linkWrap {
   padding: 0 36px;
   display: flex;
