feat: 商品列表调整库存

--- a/packages/qj-bbc-mobile-materials/src/style/goods/goods-list.scss
+++ b/packages/qj-bbc-mobile-materials/src/style/goods/goods-list.scss
@@ -181,8 +181,18 @@
           align-items: center;
           padding: 4px 10px;
 
+          .inventory-minus,
+          .inventory-plus
+          {
+            width: 26px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+          }
+
           .fill-in {
-            width: 80px;
+            max-width: 70px;
             text-align: center;
           }
         }
